--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "scripts" :
   {
     "start"       : "node bin/www",
-    "postinstall" : "browserify src/client/clientMain.js -o public/scripts/bundle.js",
     "build"       : "browserify src/client/clientMain.js -o public/scripts/bundle.js",
     "watchify"    : "watchify src/client/clientMain.js -o public/scripts/bundle.js -v -d"
   },
@@ -22,6 +21,8 @@
     "socket.io"     : "~1.7.3",
     "browserify"    : "~14.3.0",
     "watchify"      : "~3.9.0",
-    "nodejs-physijs": "~0.1.5"
+    "nodejs-physijs": "~0.1.5",
+    "pixi-particles": "^2.0.0",
+    "pixi.js": "^4.2.3"
   }
 }
